--- a/tandaterima.html
+++ b/tandaterima.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="tw1.css">
+    <link rel="stylesheet" href="tandaterima.css">
 <script src="https://apis.google.com/js/api.js" async defer></script>
 
 
@@ -162,6 +162,6 @@
 <script src="https://cdn.jsdelivr.net/npm/docx@7.8.2/build/index.min.js"></script>
 <script src="https://unpkg.com/docx@8.2.2/build/index.js"></script>
 
-    <script src="tw1.js"></script>
+    <script src="tandaterima.js"></script>
 </body>
 </html>
