--- a/Login.html
+++ b/Login.html
@@ -67,7 +67,7 @@
                     </p>
                     
                     <div style="margin-top: 2rem;">
-                        <a href="tw1.html" class="btn btn-primary" style="
+                        <a href="tandaterima.html" class="btn btn-primary" style="
                             display: inline-block;
                             font-size: 20px;
                             padding: 0.875rem 2rem;
