--- a/tandaterima.html
+++ b/tandaterima.html
@@ -44,10 +44,9 @@
             <tr class="">
                 <th>NO SURAT</th>
                 <th>TANGGAL DITERIMA </th>
-                <th>PIHAK KESATU</th>
+                <th>PIHAK YANG MENYERAHKAN</th>
                 <th>NIP</th>
-                <th>JABATAN</th>
-                <th>PIHAK KEDUA</th>
+                <th>PIHAK YANG MENERIMA</th>
                 <th>NIP</th>
                 <th>JABATAN</th>
                 <th>NO BAP</th>
@@ -100,7 +99,7 @@
 
             <!-- Pihak Kesatu -->
             <div>
-                <h3>👤 Pihak Kesatu </h3>
+                <h3>👤 Pihak Yang Menyerahkan </h3>
                 <div>
                     <div>
                         <label>Nama *</label>
@@ -111,7 +110,6 @@
                         <input type="text" id="NIP1" value="">
                     </div>
                      <div>
-                        <label>JABATAN</label>
                         <input type="text" id="JBT1" value="">
                     </div>
                 </div>
@@ -119,7 +117,7 @@
 
             <!-- Pihak Kedua -->
             <div>
-                <h3>👤 Pihak Kedua</h3>
+                <h3>👤 Pihak Yang Menerima</h3>
                 <div>
                     <div>
                         <label>Nama</label>
